--- a/store-policy/style.css
+++ b/store-policy/style.css
@@ -1,20 +1,3 @@
-.form-control {
-    display: block;
-    width: 100%;
-    padding: .375rem .75rem;
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.5;
-    color: var(--bs-body-color);
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    background-color: #fff5f5;
-    background-clip: padding-box;
-    border: var(--bs-border-width) solid #8a8a8a;
-    border-radius: var(--bs-border-radius);
-    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
-}
 .btn-primary {
     --bs-btn-color: #fff;
     --bs-btn-bg: rgba(168, 255, 37, 0.62);
@@ -24,13 +7,14 @@
     --bs-btn-hover-border-color: #ffffff;
     --bs-btn-focus-shadow-rgb: 49,132,253;
     --bs-btn-active-color: #fff;
-    --bs-btn-active-bg: rgba(255, 255, 255, 0.5);
+    --bs-btn-active-bg: rgba(253, 236, 255, 0.37);
     --bs-btn-active-border-color: #ffffff;
     --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
     --bs-btn-disabled-color: #fff;
     --bs-btn-disabled-bg: #0d6efd;
     --bs-btn-disabled-border-color: #0d6efd;
 }
+
 .header{
 	background-color: #ffffff;
 }
@@ -272,6 +256,22 @@ label{
     font-family: "Playfair Display", serif;
     color: grey;
     margin-left: 20px;
+}
+.btn-primary {
+    --bs-btn-color: #fff;
+    --bs-btn-bg: rgba(168, 255, 37, 0.62);
+    --bs-btn-border-color: #ffffff;
+    --bs-btn-hover-color: #fff;
+    --bs-btn-hover-bg: rgba(235, 171, 186, 0.55);
+    --bs-btn-hover-border-color: #ffffff;
+    --bs-btn-focus-shadow-rgb: 49,132,253;
+    --bs-btn-active-color: #fff;
+    --bs-btn-active-bg: rgba(255, 238, 255, 0.41);
+    --bs-btn-active-border-color: #ffffff;
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    --bs-btn-disabled-color: #fff;
+    --bs-btn-disabled-bg: #0d6efd;
+    --bs-btn-disabled-border-color: #0d6efd;
 }
 
 
