--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@
 .lead{
     font-size: 100px;
     font-family: "Playfair Display", serif;
-    font-style: bold;
+  
     color: #fff;
 
     margin-top: 150px;
@@ -179,7 +179,7 @@ h3{
 
 footer{
     background-color: #eaabba;
-    content-align: center;
+
     padding-top: 20px;
     padding-left: 50px;
     padding-right: 50px;
@@ -188,14 +188,14 @@ footer{
 footer h4{
     font-size: 100%;
     font-family: "Playfair Display", serif;
-    font-style: bold;
+
     color: #fff;
 }
 
 footer h5{
     font-size: 80%;
     font-family: "Playfair Display", serif;
-    font-style: bold;
+
     color: #fff;
 }
 
@@ -231,7 +231,7 @@ footer .col-md-6{
 form-label{
     font-size: 100%;
     font-family: "Playfair Display", serif;
-    font-style: bold;
+
     color: #fff;
 }
 
@@ -247,6 +247,67 @@ body {
     -webkit-text-size-adjust: 100%;
     -webkit-tap-highlight-color: transparent;
 }
+
+
+
+
+
+.modal-footer button{
+    background-color: grey;
+}
+.modal-footer button:hover{
+    background-color: lightgrey;
+}
+
+.col-auto button{
+    background-color: #eaabba;
+    color: white;
+}
+
+.col-auto button:hover{
+    background-color: lightpink;
+    color: white;
+}
+
+
+
+.btn-light {
+    --bs-btn-color: #fff;
+    --bs-btn-bg: #fff;
+    --bs-btn-border-color: #f8f9fa;
+    --bs-btn-hover-color: #000;
+    --bs-btn-hover-bg: #d3d4d5;
+    --bs-btn-hover-border-color: #c6c7c8;
+    --bs-btn-focus-shadow-rgb: 211,212,213;
+    --bs-btn-active-color: #000;
+    --bs-btn-active-bg: #c6c7c8;
+    --bs-btn-active-border-color: #babbbc;
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    --bs-btn-disabled-color: #000;
+    --bs-btn-disabled-bg: #f8f9fa;
+    --bs-btn-disabled-border-color: #f8f9fa;
+}
+
+.modal-header h3{
+    color: #eaabba;
+    font-family: "Playfair Display", serif;
+    font-size: 100%;
+    text-align: center;
+    padding: 10px;
+    margin: 10px;
+}
+.modal-body h3{
+    color: #eaabba;
+    font-family: "Playfair Display", serif;
+    font-size: 100%;
+    text-align: center;
+}
+
+.navbar-nav button{
+    background-color: white;
+}
+
+
 
 
 
