--- a/Shop/swimmies.css
+++ b/Shop/swimmies.css
@@ -5,14 +5,12 @@
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
-    color: var(--bs-body-color);
-    -webkit-appearance: none;
-    -moz-appearance: none;
+
+
     appearance: none;
     background-color: #fff5f5;
     background-clip: padding-box;
-    border: var(--bs-border-width) solid #8a8a8a;
-    border-radius: var(--bs-border-radius);
+
     transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
 .header{
@@ -105,7 +103,7 @@
 .lead{
     font-size: 100px;
     font-family: "Playfair Display", serif;
-    font-style: bold;
+
     color: #fff;
 
     margin-top: 150px;
@@ -408,7 +406,7 @@ h3{
 
 footer{
     background-color: #eaabba;
-    content-align: center;
+
     padding-top: 20px;
     padding-left: 50px;
     padding-right: 50px;
@@ -417,14 +415,14 @@ footer{
 footer h4{
     font-size: 100%;
     font-family: "Playfair Display", serif;
-    font-style: bold;
+
     color: #fff;
 }
 
 footer h5{
     font-size: 80%;
     font-family: "Playfair Display", serif;
-    font-style: bold;
+
     color: #fff;
 }
 
@@ -460,21 +458,18 @@ footer .col-md-6{
 form-label{
     font-size: 100%;
     font-family: "Playfair Display", serif;
-    font-style: bold;
+
     color: #fff;
 }
 
 body {
     margin: 0;
     font-family: "Playfair Display", serif;;
-    font-size: var(--bs-body-font-size);
-    font-weight: var(--bs-body-font-weight);
-    line-height: var(--bs-body-line-height);
+
     color: #ffffff;
     text-align: var(--bs-body-text-align);
     background-color: var(--bs-body-bg);
-    -webkit-text-size-adjust: 100%;
-    -webkit-tap-highlight-color: transparent;
+
 }
 
 h1{
@@ -485,7 +480,7 @@ h5{
     color: #eaabba;
     font-size: 300%;
     font-family: "Playfair Display", serif;
-    font-style: bold;
+
     text-align: left;
 }
 
@@ -493,7 +488,7 @@ h6{
     color: #eaabba;
     font-size: 100%;
     font-family: "Playfair Display", serif;
-    font-style: bold;
+
     text-align: left;
 }
 
@@ -529,3 +524,63 @@ h6{
 footer{
     margin-top:50px;
 }
+
+
+
+.modal-footer button{
+    background-color: grey;
+}
+.modal-footer button:hover{
+    background-color: lightgrey;
+}
+
+.col-auto button{
+    background-color: #eaabba;
+    color: white;
+}
+
+.col-auto button:hover{
+    background-color: lightpink;
+    color: white;
+}
+
+
+
+.btn-light {
+    --bs-btn-color: #fff;
+    --bs-btn-bg: #fff;
+    --bs-btn-border-color: #f8f9fa;
+    --bs-btn-hover-color: #000;
+    --bs-btn-hover-bg: #d3d4d5;
+    --bs-btn-hover-border-color: #c6c7c8;
+    --bs-btn-focus-shadow-rgb: 211,212,213;
+    --bs-btn-active-color: #000;
+    --bs-btn-active-bg: #c6c7c8;
+    --bs-btn-active-border-color: #babbbc;
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    --bs-btn-disabled-color: #000;
+    --bs-btn-disabled-bg: #f8f9fa;
+    --bs-btn-disabled-border-color: #f8f9fa;
+}
+
+.modal-header h3{
+    color: #eaabba;
+    font-family: "Playfair Display", serif;
+    font-size: 100%;
+    text-align: center;
+    padding: 10px;
+    margin: 10px;
+}
+.modal-body h3{
+    color: #eaabba;
+    font-family: "Playfair Display", serif;
+    font-size: 100%;
+    text-align: center;
+}
+
+.navbar-nav button{
+    background-color: white;
+}
+
+
+
